--- a/app/src/main/res/layout/item_body_header.xml
+++ b/app/src/main/res/layout/item_body_header.xml
@@ -4,15 +4,29 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:textColor="#222"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#222"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <View
+            android:id="@+id/btnMore"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/ic_more_vert_black_24dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvCreatedTime"
